Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2014-11-28 18:43:48Z
          - allow tests to pass under older Dist::Zilla by skipping testing
            non-ascii module names there

0.003     2014-10-31 06:54:58Z
          - fix case where authority module is not the first namespace in a
            file

0.002     2014-09-06 01:29:49Z
          - make one of the code paths more efficient
          - add more diagnostic messages
          - add missing version to prereq specification
          - extract the proper package name from a module when there are
            statements in the 'main' namespace
          - add more detailed documentation explaining the rationale behind
            this new metadata

0.001     2014-08-29 03:43:33Z
          - Initial release.