@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now using Dist::Zilla::Role::ModuleMetadata to use a cached object
+            for efficiency
 
 0.004     2014-11-28 18:43:48Z
           - allow tests to pass under older Dist::Zilla by skipping testing
